style.css
body {
    font-family: "Titillium Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
    text-align: center;
}

/* general section padding */
section {
    padding: 5rem 0;
}

h1, .lead {
    text-align: center;
}

html {
    width:100%;
    height: 100%;
    display: table;
}

body {
    width:100%;
    display:table-cell;
}

html, body {
    margin: 0px;
    padding: 0px;
}

html.js .scrollreveal {
    visibility: hidden;
}

.btn-primary {
    background-color: #880000;
    border-color: #880000;
}

.btn-primary:hover {
    background-color: #660000;
    border-color: #660000;
}

.btn-primary:not([disabled]):not(.disabled):active {
    background-color: #660000;
    border-color: #440000;
    box-shadow: 0 0 0 .2rem rgba(68, 0, 0, .5)
}

.btn-primary:focus {
    box-shadow: 0 0 0 .2rem rgba(68, 0, 0, .5)
}

.text-muted {
    color: #888888 !important;
}

/******************************/
/*         NAVIGATION         */
/******************************/

.navbar {
    box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.5);
}

.navbar-animated, .navbar-animated .nav-link, .navbar-animated .navbar-brand img {
    transition: 200ms all ease;
}

.navbar-brand img {
    width: 150px;
}

nav ul li a:hover {
    background-color: #fff;

}

nav ul li a {
    display: block;
    text-decoration: none;
    padding: 40px 60px;
    font-size: 20px;
    font-weight: 300;
    color: #323642;
}

.bg-dark {
    background-color: rgb(48, 48, 48) !important;
}

.nav-link {
    margin: 0 .3rem;
}

.nav-link:hover {
    background-color: transparent;
}

@media screen and (min-width: 992px) {
    html.js .nav-top .navbar-brand img {
        width: 250px;
    }

    html.js .nav-top {
        background-color: transparent !important;
        box-shadow: none;
    }

    html.js .nav-top .nav-link {
        padding-top: 2rem;
        padding-bottom: 2rem;
    }
}

/******************************/
/*            HOME            */
/******************************/

section#home {
    display: block;
    color: white;
    padding: 0;
    height: 100vh;
}

#home-slogan {
    animation-delay: 500ms;
}

#home-lead {
    animation-delay: 1000ms;
}

#home-buttons {
    animation-delay: 2000ms;
}

.video-background {
    width: 100%;
    height: 100%;
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}

.video-background .background {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: -100;
    background-size: cover;
    overflow: hidden;
    background: black center;
}

.video-background .background video {
    min-width: 100%;
    min-height: 100%;
    width: auto;
    height: auto;
    opacity: 0.4;
}

.video-background .overlay {
    margin-top: 3rem;
    text-align: center;
}

.video-background .bottom-button {
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    cursor: pointer;
    animation-delay: 2500ms;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.25));
    background-size: cover;
    height: 3rem;
}

.video-background .bottom-button .chevron {
    width: 3rem;
    margin-top: -4rem;
    opacity: 0.5;
    transition: 500ms all ease;
    transform: translateY(0);
}

.video-background .bottom-button:hover .chevron {
    opacity: 1;
    transform: translateY(1rem);
}

/******************************/
/*          FEATURES          */
/******************************/
section#features {

}

.feature {
    text-align: center;
}

.feature > .icon {
    width: 10rem;
    height: 10rem;
    padding: 2rem;
    text-align: center;
    display: inline-block;
}

.feature > .icon > img {
    max-width: 100%;
    max-height: 100%;
    display: inline-block;
}

footer {
    background: #333333;
    padding: 1rem;
}

